adaptable/pages/mainComponents/table/SelectTable.module.scss
.tableSection {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    margin-top: 2.5rem;

    &__navTabs {
        display: flex;
        flex-direction: row;
        padding-left: 4.375rem;
        width: 100%;
        background-color: #FFFFFF;

        &__item {
            padding-right: 2.5rem;
            font-family: Albert Sans;
            font-weight: 500;
            font-size: 0.875rem;
            color: #280B3D;
            align-items: center;
            display: flex;
            flex-direction: column;
            justify-content: center;

            &__btn--selected {
                border-bottom: 3px solid;
                border-color: #7B3CEA;
            }

            &__btn {
                position: relative;
                min-height: 100%;
                display: flex;
            }

            &__btn--hover:hover {
                color: #7B3CEA;
            }
        }
    }
}

